cabal-version:       2.2
name:                tab-tools
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JLimperg/tab-tools#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (C) 2024 Jannis Limperg
category:            Application
build-type:          Simple
extra-source-files:  README.md
                   , static/Feedback/style.css
                   , static/PrivateURLExport/style.css
                   , export-opentab.sh

common defaults
  default-language:    Haskell2010
  ghc-options:         -Weverything
                       -Werror
                       -Wno-partial-type-signatures
                       -Wno-name-shadowing
                       -Wno-missing-import-lists
                       -Wno-implicit-prelude
                       -Wno-unsafe
                       -Wno-safe
                       -Wno-missing-safe-haskell-mode
                       -Wno-missing-deriving-strategies
                       -Wno-monomorphism-restriction
                       -Wno-all-missed-specializations
                       -Wno-prepositive-qualified-module
                       -Wno-missing-kind-signatures
  default-extensions:  OverloadedStrings
                     , NamedFieldPuns
                     , NoFieldSelectors
                     , OverloadedRecordDot
                     , DuplicateRecordFields
                     , ScopedTypeVariables
                     , FlexibleInstances
                     , FlexibleContexts
                     , DataKinds
                     , ImportQualifiedPost
                     , DeriveGeneric
                     , LambdaCase
                     , StrictData

library tab-tools-private
  import:              defaults
  hs-source-dirs:      src/Common
  exposed-modules:     Api
                     , Api.Cache
                     , Api.Types
                     , CommonCmdArgs
  build-depends:       base
                     , aeson
                     , containers
                     , modern-uri
                     , optparse-applicative
                     , req
                     , scientific
                     , text
                     , transformers
                     , vector

executable tabbycat-feedback
  import:              defaults
  hs-source-dirs:      src
  main-is:             Feedback/Main.hs
  build-depends:       base >= 4.7 && < 5
                     , tab-tools-private
                     , blaze-html
                     , bytestring
                     , cassava
                     , containers
                     , directory
                     , file-embed
                     , optparse-applicative
                     , random
                     , random-shuffle
                     , text
  other-modules:       Feedback.CmdArgs
                     , Feedback.Render
                     , Feedback.RenderEmailTable
                     , Feedback.Static
                     , Feedback.Types

executable tabbycat-csv-importer
  import:              defaults
  hs-source-dirs:      src
  main-is:             CSVImport/Main.hs
  build-depends:       base >= 4.7 && < 5
                     , tab-tools-private
                     , bytestring
                     , cassava
                     , containers
                     , optparse-applicative
                     , text
                     , transformers
                     , vector
  other-modules:       CSVImport.CmdArgs
                     , CSVImport.Csv
                     , CSVImport.Munging
                     , CSVImport.Validation

executable tabbycat-private-url-export
  import:              defaults
  hs-source-dirs:      src
  main-is:             PrivateURLExport/Main.hs
  build-depends:       base >= 4.7 && < 5
                     , tab-tools-private
                     , blaze-html
                     , bytestring
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-qrcode
                     , directory
                     , filepath
                     , file-embed
                     , haskell-qrencode
                     , optparse-applicative
                     , req
                     , text
  other-modules:       PrivateURLExport.CmdArgs
                     , PrivateURLExport.OpenTabInput
                     , PrivateURLExport.Render
                     , PrivateURLExport.Static
                     , PrivateURLExport.Types
