cabal-version:       2.2
name:                tab-tools
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JLimperg/tab-tools#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (C) 2024 Jannis Limperg
category:            Application
build-type:          Simple
extra-source-files:  README.md
                   , static/Feedback/style.css
                   , static/PrivateURLExport/style.css
                   , export-opentab.sh

executable tabt
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Api
                     , Api.Cache
                     , Api.Types
                     , CommonCmdArgs
                     , CSVImport.CmdArgs
                     , CSVImport.Csv
                     , CSVImport.Main
                     , CSVImport.Munging
                     , CSVImport.Validation
                     , Feedback.CmdArgs
                     , Feedback.Main
                     , Feedback.Render
                     , Feedback.RenderEmailTable
                     , Feedback.Static
                     , Feedback.Types
                     , PrivateURLExport.CmdArgs
                     , PrivateURLExport.Main
                     , PrivateURLExport.OpenTabInput
                     , PrivateURLExport.Render
                     , PrivateURLExport.Static
                     , PrivateURLExport.Types
  build-depends:       base
                     , aeson
                     , blaze-html
                     , bytestring
                     , cassava
                     , containers
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-qrcode
                     , directory
                     , filepath
                     , file-embed
                     , haskell-qrencode
                     , modern-uri
                     , optparse-applicative
                     , random
                     , random-shuffle
                     , req
                     , scientific
                     , text
                     , transformers
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Weverything
                       -Werror
                       -Wno-partial-type-signatures
                       -Wno-name-shadowing
                       -Wno-missing-import-lists
                       -Wno-implicit-prelude
                       -Wno-unsafe
                       -Wno-safe
                       -Wno-missing-safe-haskell-mode
                       -Wno-missing-deriving-strategies
                       -Wno-monomorphism-restriction
                       -Wno-all-missed-specializations
                       -Wno-prepositive-qualified-module
                       -Wno-missing-kind-signatures
  default-extensions:  OverloadedStrings
                     , NamedFieldPuns
                     , NoFieldSelectors
                     , OverloadedRecordDot
                     , DuplicateRecordFields
                     , ScopedTypeVariables
                     , FlexibleInstances
                     , FlexibleContexts
                     , DataKinds
                     , ImportQualifiedPost
                     , DeriveGeneric
                     , LambdaCase
                     , StrictData
