name:                tabbycatt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JLimperg/tabbycatt#readme
license:             BSD3
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (C) 2023 Jannis Limperg
category:            Application
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                   , static/Feedback/style.css
                   , static/PrivateURLExport/style.css
                   , export-opentab.sh

executable tabbycat-feedback
  hs-source-dirs:      src/Feedback
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-html
                     , bytestring
                     , cassava
                     , containers
                     , directory
                     , file-embed
                     , modern-uri
                     , optparse-applicative
                     , random
                     , random-shuffle
                     , req
                     , text
  other-modules:       Api
                     , CmdArgs
                     , Render
                     , RenderEmailTable
                     , Static
                     , Types

executable tabbycat-csv-importer
  hs-source-dirs:      src/CSVImport
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , cassava
                     , containers
                     , http-conduit
                     , text
                     , vector
  other-modules:       Api
                     , Api.Types
                     , Csv
                     , Munging
                     , Validation
  ghc-options:         -Weverything -Werror -Wno-partial-type-signatures -Wno-name-shadowing -Wno-missing-import-lists -Wno-implicit-prelude -Wno-unsafe -Wno-unsafe -Wno-missing-deriving-strategies -Wno-monomorphism-restriction -Wno-all-missed-specializations -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module -Wno-missing-kind-signatures
  default-extensions:  OverloadedStrings
                     , NamedFieldPuns
                     , NoFieldSelectors
                     , OverloadedRecordDot
                     , OverloadedRecordUpdate
                     , DuplicateRecordFields
                     , ScopedTypeVariables
                     , FlexibleInstances

executable tabbycat-private-url-export
  hs-source-dirs:      src/PrivateURLExport
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-html
                     , bytestring
                     , containers
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-qrcode
                     , directory
                     , filepath
                     , file-embed
                     , haskell-qrencode
                     , modern-uri
                     , optparse-applicative
                     , req
                     , text
  other-modules:       Api
                     , CmdArgs
                     , OpenTabInput
                     , Render
                     , Static
                     , Types
