cabal-version:       2.2
name:                tabbycatt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JLimperg/tabbycatt#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jannis Limperg
maintainer:          jannis@limperg.de
copyright:           (C) 2024 Jannis Limperg
category:            Application
build-type:          Simple
extra-source-files:  README.md
                   , static/Feedback/style.css
                   , static/PrivateURLExport/style.css
                   , export-opentab.sh

common defaults
  default-language:    Haskell2010
  ghc-options:         -Weverything
                       -Werror
                       -Wno-partial-type-signatures
                       -Wno-name-shadowing
                       -Wno-missing-import-lists
                       -Wno-implicit-prelude
                       -Wno-unsafe
                       -Wno-safe
                       -Wno-missing-safe-haskell-mode
                       -Wno-missing-deriving-strategies
                       -Wno-monomorphism-restriction
                       -Wno-all-missed-specializations
                       -Wno-prepositive-qualified-module
                       -Wno-missing-kind-signatures
  default-extensions:  OverloadedStrings
                     , NamedFieldPuns
                     , NoFieldSelectors
                     , OverloadedRecordDot
                     , DuplicateRecordFields
                     , ScopedTypeVariables
                     , FlexibleInstances
                     , FlexibleContexts
                     , DataKinds
                     , ImportQualifiedPost
                     , DeriveGeneric
                     , LambdaCase

executable tabbycat-feedback
  import:              defaults
  hs-source-dirs:      src/Feedback
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-html
                     , bytestring
                     , cassava
                     , containers
                     , directory
                     , file-embed
                     , modern-uri
                     , optparse-applicative
                     , random
                     , random-shuffle
                     , req
                     , text
  other-modules:       Api
                     , CmdArgs
                     , Render
                     , RenderEmailTable
                     , Static
                     , Types

executable tabbycat-csv-importer
  import:              defaults
  hs-source-dirs:      src/CSVImport
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , cassava
                     , containers
                     , http-conduit
                     , text
                     , vector
  other-modules:       Api
                     , Api.Types
                     , Csv
                     , Munging
                     , Validation

executable tabbycat-private-url-export
  import:              defaults
  hs-source-dirs:      src/PrivateURLExport
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , blaze-html
                     , bytestring
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-qrcode
                     , directory
                     , filepath
                     , file-embed
                     , haskell-qrencode
                     , optparse-applicative
                     , req
                     , text
  other-modules:       Api
                     , CmdArgs
                     , OpenTabInput
                     , Render
                     , Static
                     , Types
